<resources>
    <string name="app_name">Pi Pal</string>
    <string name="app_description">Personal Pi Trainer</string>
    <string name="game_mode">Game</string>
    <string name="practice_mode">Practice</string>
    <string name="memorize_mode">Memorize</string>
    <string name="scores_mode">Scores</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="pref_key_digits_per_row">KEY_DIGITS_PER_ROW</string>
    <string name="pref_title_digits_per_row">Digits per row</string>
    <string-array name="pref_digits_per_row">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    
    <string name="practice_row_hint">Start at row</string>
    <string name="only_d_rows_available_message">Only %d rows available. Try a smaller number.</string>
    <string name="digits_correct_d">digits correct: %d</string>
    <string name="current_row_d">current row: %d</string>
    <string name="scores_list_header_digits">digits</string>
    <string name="scores_list_header_date">date</string>
    <string name="empty_scores_list_message">Scores from completed \ngames will be displayed here.</string>
</resources>
