<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.pimemorize.activities.MainMenuActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:paddingTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/app_name"
            android:textSize="40dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_margin="8dp"/>

        <Button
            android:layout_margin="8dp"
            android:id="@+id/menu_test_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_mode"/>

        <Button
            android:layout_margin="8dp"
            android:id="@+id/menu_practice_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practice_mode"/>

        <Button
            android:layout_margin="8dp"
            android:id="@+id/menu_memorize_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/memorize_mode"/>

        <Button
            android:layout_margin="8dp"
            android:id="@+id/menu_scores_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scores_mode"/>

    </LinearLayout>

</RelativeLayout>
